--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Testes para a entrega da atividade em aula</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam nemo quia ipsa autem, similique omnis ut est quae velit quo minus dolorem atque non possimus sint dolor hic magnam dolore!</p>
+    <p>Deu errado</p>
 </body>
 </html>
